// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display correctly with expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        5
      </span>
       
      expenses
       totaling
       
      <span>
        $3.46
      </span>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;

exports[`Should display correctly without expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span />
       
      expenses
       totaling
       
      <span>
        $0.00
      </span>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;
